--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "'Newly added cell!'z"
+    "'Newly added cell!'"
    ]
   },
   {
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "This is a python cell without valid Python so we will see an error"
+    "This 'is a python cell without valid Python so we will see an error"
    ]
   },
   {
